Fix layout issue for IE
In IE, grid layout was not working as I wanted so I changed flex-box instead of grid layout.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,3 @@
-
 /* ======
 General styles
 ======= */
@@ -390,18 +389,23 @@ Animation
 Work page styles
 ======= */
 .project-list {
-  margin: 30px 20px 0;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  width: 100%;
+  margin: 30px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
 }
 
 .project-list__item {
   background: #f8f8f8;
   border-radius: 8px;
   padding: 10px 20px;
+  width: 30%;
+  margin-bottom: 20px;
 }
 
 .project-list__item p {
@@ -436,6 +440,7 @@ form {
 Media queries
 ======= */
 @media all and (max-width: 700px) {
+
   .navigation-list,
   .animation {
     display: none;
@@ -467,8 +472,17 @@ Media queries
   }
 
   .project-list {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .project-list__item {
+    width: 300px;
   }
 
   .page-footer {
@@ -477,9 +491,8 @@ Media queries
 }
 
 @media all and (min-width: 700px) and (max-width: 900px) {
-  .project-list {
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+  .project-list__item {
+    width: 45%;
   }
 }
 
