--- a/css/styles.css
+++ b/css/styles.css
@@ -289,16 +289,19 @@ Animation
 Work page styles
 ======= */
 .project-list {
-  margin: 30px 20px 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  width: 100%;
+  margin: 30px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .project-list__item {
   background: var(--bg);
   border-radius: 8px;
   padding: 10px 20px;
+  width: 30%;
+  margin-bottom: 20px;
 }
 
 .project-list__item p {
@@ -362,7 +365,12 @@ Media queries
   }
 
   .project-list {
-    grid-template-columns: 1fr;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-list__item {
+    width: 300px;
   }
 
   .page-footer {
@@ -371,8 +379,8 @@ Media queries
 }
 
 @media all and (min-width: 700px) and (max-width: 900px) {
-  .project-list {
-    grid-template-columns: 1fr 1fr;
+  .project-list__item {
+    width: 45%;
   }
 }
 
